libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/if-1.jsonc
//@ run: fail
//@ description: if/1 should error out
["::kernel::special_form::if", { "#literal": true }]
//~^ ERROR expected 2 or 3 arguments to `if`, found 1
